# voiceman

./: AUTHOR  ChangeLog  Doxyfile  NEWS  README  THANKS  configure.ac  configure.in  makefile.am  voiceman.conf.in
daemon/: VoicemanException.h  makefile.am  voiceman.h
daemon/config_file/: ConfigFile.cpp  ConfigFile.h  ConfigFileException.h  ConfigFileSection.h  ConfigFileValueTypeException.h  makefile.am
daemon/core/: AbstractExecutorOutput.h  AbstractTextProcessor.h  Client.h  ClientFactory.h  ExecutorInterface.cpp  ExecutorInterface.h  Lang.h  MainLoop.cpp  MainLoop.h  Output.cpp  Output.h  OutputSet.cpp  OutputSet.h  TextItem.cpp  TextItem.h  TextParam.cpp  TextParam.h  TextProcessor.cpp  TextProcessor.h  VoicemanProtocol.cpp  VoicemanProtocol.h  core.h  makefile.am
daemon/langs/: EngLang.cpp  EngLang.h  LangManager.cpp  LangManager.h  RusLang.cpp  RusLang.h  makefile.am
daemon/main/: ConfigurationException.h  DelimitedFile.cpp  DelimitedFile.h  configuration.cpp  configuration.h  main.cpp  makefile.am
daemon/system/: SystemException.h  files.cpp  files.h  logging.cpp  logging.h  makefile.am  sockets.cpp  sockets.h  system.h
data/: caps  chars-table  replacements.all  replacements.espeak  replacements.mbrola  replacements.none  replacements.ru_tts  replacements.some  ru_const
debian/: README.Debian  README.source  changelog  control  copyright  rules  voiceman.dirs
doc/: voiceman-protocol.txt
emacspeak/: Connection.cpp  Connection.h  LineParser.cpp  LineParser.h  emacspeak.h  main.cpp  makefile.am
examples/configuration/: mbrola.output  ru_tts.output
examples/libvmclient-api/: example1.c  example2.c  example3.c  makefile
executors/: default.c  executorCommandHeader.h  makefile.am  stress.cpp  tone.c
libvmclient/: makefile.am  vmclient.c  vmclient.h
scripts/: voiceman-reload
shell/: makefile.am  shell.cpp
tools/: makefile.am  trim.cpp
utils/: CmdArgsParser.cpp  CmdArgsParser.h  Transcoding.cpp  Transcoding.h  makefile.am  vmstrings.h
